# FluentOS

./: .gitignore  FluentOS项目文档.txt  LICENSE  README.md
docs/guides/: Physical-Machine-Setup-Guide.md  VirtualBox-Build-Guide.md
docs/superpowers/plans/: 2026-06-22-fluentos-implementation-plan.md
docs/superpowers/specs/: 2026-06-22-fluentos-design.md
iso/: build.sh  install-from-windows.bat  packages.x86_64  pacman.conf
iso/airootfs/boot/grub/: grub.cfg
iso/airootfs/root/: customize_airootfs.sh
scripts/: release.sh
src/calamares/: calamares.conf
src/calamares/branding/: branding.desc  fluentos.desc
src/calamares/scripts/: fluentos-firstboot.sh  mount-windows.sh
src/grub-theme/: boot_menu_fluentos.txt  install-theme.sh  theme.txt
src/shell/: CMakeLists.txt  main.cpp
src/shell/control-panel/: ControlPanel.qml  SettingsPage.qml
src/shell/filemanager/: BreadcrumbBar.qml  DetailsPane.qml  FileListView.qml  FileManager.qml  NavigationPane.qml
src/shell/qml/: main.qml
src/shell/startmenu/: AllAppsItem.qml  AllAppsView.qml  PinnedAppTile.qml  SearchBox.qml  SearchResults.qml  StartMenu.qml
src/shell/system/: WindowsDriveMount.qml  WindowsProgramLauncher.qml  windows_drive_manager.py
src/shell/taskbar/: CMakeLists.txt  NotificationArea.qml  PinnedItem.qml  SystemTray.qml  Taskbar.qml  WindowButton.qml  taskbar-linux.cpp  taskbarmodel.cpp  taskbarmodel.h  taskbarplugin.cpp  taskbarplugin.h
src/themes/fluent-theme/: FluentTheme.qml
src/themes/glass-effect/: GlassComponents.qml  acrylic.frag  glass.frag  mica.frag
